--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,12 @@
         </activity>
         <activity
             android:name=".Writer"
+            android:parentActivityName=".MainActivity"
             android:label="@string/app_name">
         </activity>
         <activity
             android:name=".Reader"
+            android:parentActivityName=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
